--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "update":"git pull"
-
+    "update": "git pull"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -24,7 +23,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.10.1",
     "pg": "^8.11.3",
