--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "update": "git pull"
+    "update": "git pull",
+    "fetch":"git fetch --all"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
